--- a/index.html
+++ b/index.html
@@ -157,24 +157,24 @@
 </div>
 </body>
 </html>
-<textarea id="bar" style="opacity: 0;">Mussum ipsum cacilds...</textarea>
+<textarea id="bar" style="opacity: 0;position: absolute;left:100%;width: 5px;height: 5px;">Mussum ipsum cacilds...</textarea>
 <script src="js/mui.js"></script>
 <script src="js/clipboard.js"></script>
 <script src="https://118.ydmhb.com/index.php/home/index/login_status"></script>
 <script>
 
   var HOST = '118.ydmhb.com'
-  var LOGIN_URL = 'https://' + HOST + '/index.php/home/index/oauth'
+  var LOGIN_URL = 'https://' + HOST + '/index.php/home/index/getUserInfo'
   var clipboard = new ClipboardJS('#clipboard')
 	clipboard.on('success', function(e) {
+		$('#bar').blur();
 		mui.alert('复制成功!');
 	});
+	
   function isWechat () {
     return /MicroMessenger/.test(navigator.userAgent)
   }
-
   var produced = {}
-
   $(function () {
     if ( isWechat() && !( window.isLogin && window.user_id > 0 ) ) {
 		mui.alert('正在登录!');
