Mussum ipsum cacilds...
Mussum ipsum cacilds...

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 </div>
 </body>
 </html>
-<textarea id="bar" readonly style="position: absolute;left:100%;width: 5px;height: 5px;">Mussum ipsum cacilds...</textarea>
+<textarea id="bar" readonly style="position: absolute;left:100%;width: 5px;height: 5px;"></textarea>
 <script src="js/mui.js"></script>
 <script src="js/clipboard.js"></script>
 <script src="https://118.ydmhb.com/index.php/home/index/login_status"></script>
