--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<script src="https://118.ydmhb.com/static/produced/js/main.js"></script>
 </head>
 <body>
-<div class="header" style="width: 100%;overflow:hidden;">
-	<textarea id="bar" readonly style="position: absolute;left:100%;width: 5px;height: 5px;"></textarea>
+<div class="header" style="width: 100vw;overflow:hidden;">
+  <textarea id="bar" readonly style="position: absolute;left:100%;width: 0px;height: 0px;"></textarea>
   <div class="left">
     <img id="img" src="" />
     <span class="text" id="title"></span>
