--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<script src="https://118.ydmhb.com/index.php/home/index/login_status"></script>
 	<script src="https://118.ydmhb.com/static/produced/js/main.js"></script>
 </head>
-<body style="overflow:hidden;">
-<div class="header" style="width: 100vw;overflow:hidden;">
+<body>
+<div class="header" style="width: 100vw;overflow:hidden;position:relative;">
   <textarea id="bar" readonly style="position: absolute;left:100%;width: 0px;height: 0px;"></textarea>
   <div class="left">
     <img id="img" src="" />
