--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
   <meta charset="UTF-8">
   <title></title>
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-  <script src="https://118.ydmhb.com/static/produced/js/zepto_1.1.3.js"></script>
-  <link rel="stylesheet" type="text/css" href="https://118.ydmhb.com/static/produced/css/mui.css" />
-  <link rel="stylesheet" type="text/css" href="https://118.ydmhb.com/static/produced/css/main.css" />
-	<script src="https://118.ydmhb.com/static/produced/js/mui.js"></script>
-	<script src="https://118.ydmhb.com/static/produced/js/clipboard.js"></script>
-	<script src="https://118.ydmhb.com/index.php/home/index/login_status"></script>
-	<script src="https://118.ydmhb.com/static/produced/js/main.js"></script>
+  <script src="https://sbkz.qztywl.com/static/produced/js/zepto_1.1.3.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://sbkz.qztywl.com/static/produced/css/mui.css" />
+  <link rel="stylesheet" type="text/css" href="https://sbkz.qztywl.com/static/produced/css/main.css" />
+	<script src="https://sbkz.qztywl.com/static/produced/js/mui.js"></script>
+	<script src="https://sbkz.qztywl.com/static/produced/js/clipboard.js"></script>
+	<script src="https://sbkz.qztywl.com/index.php/home/index/login_status"></script>
+	<script src="https://sbkz.qztywl.com/static/produced/js/main.js"></script>
 </head>
 <body>
+
 <div class="header" style="width: 100vw;overflow:hidden;position:relative;">
   <textarea id="bar" readonly style="position: absolute;left:100%;width: 0px;height: 0px;"></textarea>
   <div class="left">
