--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <title></title>
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-  <script src="https://118.ydmhb.com/static/produced/js/zepto_1.1.3.js"></script>
-  <link rel="stylesheet" type="text/css" href="https://118.ydmhb.com/static/produced/css/mui.css" />
-  <link rel="stylesheet" type="text/css" href="https://118.ydmhb.com/static/produced/css/main.css" />
-	<script src="https://118.ydmhb.com/static/produced/js/mui.js"></script>
-	<script src="https://118.ydmhb.com/static/produced/js/clipboard.js"></script>
-	<script src="https://118.ydmhb.com/index.php/home/index/login_status"></script>
-	<script src="https://118.ydmhb.com/static/produced/js/main.js"></script>
+  <script src="https://118.ydmhb.com/static/produced/js/zepto_1.1.3.js?v=1.0.0"></script>
+  <link rel="stylesheet" type="text/css" href="https://118.ydmhb.com/static/produced/css/mui.css?v=1.0.0" />
+  <link rel="stylesheet" type="text/css" href="https://118.ydmhb.com/static/produced/css/main.css?v=1.0.0" />
+	<script src="https://118.ydmhb.com/static/produced/js/mui.js?v=1.0.0"></script>
+	<script src="https://118.ydmhb.com/static/produced/js/clipboard.js?v=1.0.0"></script>
+	<script src="https://118.ydmhb.com/index.php/home/index/login_status?v=1.0.0"></script>
+	<script src="https://118.ydmhb.com/static/produced/js/main.js?v=1.0.0"></script>
 </head>
 <body>
 <div class="header" style="width: 100vw;overflow:hidden;position:relative;">
