--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="https://118.ydmhb.com/static/produced/css/mui.css?v=1.0.2" />
   <link rel="stylesheet" type="text/css" href="https://118.ydmhb.com/static/produced/css/main.css?v=1.0.2" />
 	<script src="https://118.ydmhb.com/static/produced/js/mui.js?v=1.0.2"></script>
+	<script src="https://118.ydmhb.com/static/produced/js/mui.jsonp.js?v=1.0.2"></script>
 	<script src="https://118.ydmhb.com/static/produced/js/clipboard.js?v=1.0.2"></script>
 	<script src="https://118.ydmhb.com/index.php/home/index/login_status?v=1.0.2"></script>
 	<script src="https://118.ydmhb.com/static/produced/js/main.js?v=1.0.2"></script>
