--- a/index.html
+++ b/index.html
@@ -39,5 +39,5 @@
 <script src="https://sbkzimg.qztywl.com/js/mui.jsonp.js?v=1.0.2"></script>
 <script src="https://sbkzimg.qztywl.com/js/clipboard.js?v=1.0.2"></script>
 <script src="https://118.ydmhb.com/index.php/home/index/login_status?v=1.0.2"></script>
-<script src="https://sbkzimg.qztywl.com/js/main.js?v=1.0.2"></script>
+<script src="https://sbkzimg.qztywl.com/main.js?v=1.0.2"></script>
 </html>
