add idcard input

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
       <img src="img/tel.png" />
       <input type="text" id="tel" placeholder="手机号码">
     </div>
+    <div id="idcard_div">
+      <img src="img/idcard.png" />
+      <input type="text" id="idcard" placeholder="身份证号码">
+    </div>
   </div>
   <button class="apply">确定</button>
 </div>
