change to local

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
   <script src="https://sbkzimg.qztywl.com/js/zepto_1.1.3.js?v=1.0.2"></script>
   <link rel="stylesheet" type="text/css" href="https://sbkzimg.qztywl.com/css/mui.css?v=1.0.2" />
-  <link rel="stylesheet" type="text/css" href="https://sbkzimg.qztywl.com/css/main.css?v=1.0.2" />
+  <link rel="stylesheet" type="text/css" href="https://118.ydmhb.com/static/produced/css/main.css?v=1.0.2" />
 </head>
 <body>
 <div class="header" style="width: 100vw;overflow:hidden;position:relative;">
@@ -43,5 +43,5 @@
 <script src="https://sbkzimg.qztywl.com/js/mui.jsonp.js?v=1.0.2"></script>
 <script src="https://sbkzimg.qztywl.com/js/clipboard.js?v=1.0.2"></script>
 <script src="https://118.ydmhb.com/index.php/home/index/login_status?v=1.0.2"></script>
-<script src="https://sbkzimg.qztywl.com/main.js?v=1.0.2"></script>
+<script src="https://118.ydmhb.com/static/produced/js/main.js?v=1.0.2"></script>
 </html>
